# secriskmanager

./: .dockerignore  .gitignore  Dockerfile  build_tailwind.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
accounts/: admin.py  middleware.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: allowed_ip_form.html  allowed_ip_list.html
assets/: write_tailwind.py
assets/css/: tailwind.css
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: index.html
local_assets/: admin.py  apps.py  exporters.py  forms.py  models.py  parsers.py  urls.py  views.py
local_assets/migrations/: 0001_initial.py
local_assets/templates/local_assets/: _bind_command.html  _confirm_bulk_delete.html  _confirm_delete.html  _form.html  _import.html  _list.html
risk_domain/: admin.py  apps.py  exporters.py  forms.py  models.py  parsers.py  urls.py  views.py
risk_domain/migrations/: 0001_initial.py
risk_ip/: admin.py  apps.py  exporters.py  forms.py  models.py  parsers.py  urls.py  views.py
risk_ip/migrations/: 0001_initial.py  0002_tag_maliciousip_tags.py  0003_sourcepreset.py
secriskmanager/: asgi.py  urls.py  wsgi.py
secriskmanager/settings/: base.py  dev.py  prod.py
sync/: admin.py  backup_views.py  models.py  sync_preview.py  task_views.py  urls.py  views.py
sync/migrations/: 0001_initial.py  0002_taskprogress.py  0003_default_feeds.py
templates/: base.html  import_export_center.html
templates/includes/: navbar.html
templates/registration/: login.html
(+28 files in other folders)
